# prompt

./: .gitignore  CLAUDE.md  INGEST_PROGRESS.md  QUICK_START.md  README.md  SETUP_STATUS.md  SUPABASE_SETUP.md  UPSTASH_SETUP.md  docker-compose.yml  package-lock.json  package.json  vercel.json
backend/: .env.example  ingest.py  pyproject.toml  requirements.txt
backend/scripts/: create_legal_templates.py  ingest_legal_docs.py  run_migrations.py  seed_data.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  middleware.py
backend/src/api/v1/: admin.py  analytics.py  auth.py  cases.py  conversation.py  documents.py  domains.py  fir.py  institutes.py  rag.py  staff.py  subscriptions.py  templates.py  tokens.py  voice.py
backend/src/db/: chromadb_client.py  redis.py  session.py  supabase_client.py
backend/src/models/: admin.py  common.py  conversation.py  document.py  domain.py  generated_document.py  promo_token.py  role.py  subscription.py  template.py  user.py  voice.py
backend/src/services/: analytics_service.py  chat.py  data_binding.py  domain_config_service.py  domain_service.py  template_service.py  token_service.py  user_service.py  validation_engine.py
backend/src/services/ai/: document_agent.py  fir_extractor.py  gemini.py  key_rotator.py  response_cache.py  semantic_cache.py
backend/src/services/auth/: email_auth.py  oauth.py  phone_auth.py
backend/src/services/documents/: docx_export.py  pdf_export.py  storage_service.py  text_extraction.py  virus_scan.py
backend/src/services/language/: detection.py
backend/src/services/ocr/: confidence_evaluator.py  easyocr_engine.py  orchestrator.py  rtl_preprocessor.py  tesseract_engine.py
backend/src/services/rag/: cache.py  chunking.py  embeddings.py  ingestion.py  provenance.py  retrieval.py
backend/src/services/subscriptions/: subscription_service.py  trial.py
backend/src/services/voice/: audio_cleanup.py  session_service.py  tts_cache.py  tts_service.py  whisper_service.py
backend/src/services/workflows/: base_workflow.py  document_generation.py  document_ingestion.py
backend/src/services/workflows/nodes/: analytics_agent.py  generator_agent.py  planner_agent.py  query_agent.py  validation_agent.py
backend/src/utils/: error_tracking.py  logging.py  sanitisation.py
backend/supabase/: COMBINED_MIGRATION.sql  SEED_DATA.sql  seed.sql
backend/supabase/migrations/: 001_core_tables.sql  002_feature_tables.sql  003_rls_policies.sql  004_indexes.sql  005_institutes_staff_permissions.sql  006_promotional_tokens_schema_fix.sql  007_add_free_trial_tier.sql  008_professional_details.sql  009_education_medical_domains.sql  010_cases.sql  011_template_submissions.sql  20260314_create_core_tables.sql  20260314_create_documents_chat_tables.sql  20260314_create_subscriptions_table.sql  20260315_create_rls_policies.sql
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/: .env.example  .eslintrc.json  app.json  package.json  (+2 more)
(+197 files in other folders)
